# assistant-atc-multiagent

./: README.md  pyproject.toml
agents/: analyst.py  researcher.py  responder.py  supervisor.py
config/: llm_config.py
data/corpus_procedures/: procedures_atc.txt
data/corpus_urgences/: urgences_atc.txt
graph/: workflow.py
prompts/: analyst.txt  researcher.txt  responder.txt  supervisor.txt
tools/: rag_tools.py
ui/: app.py
